--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,23 @@
 /*  your css code here. If applicable */
+:root{
+	background-color:rgb(135, 206, 235);
+}
+p:nth-of-type(1){
+	background-color:black;
+	color:white;
+}
+p:nth-of-type(4){
+	color:red;
+}
+li{
+	background-color:grey;
+	width:50%;
+	padding:10px;
+	font-size:22px;
+}
+li:nth-of-type(odd){
+	background-color:white;
+}
+li:nth-last-of-type(3){
+	background-color:pink;
+}
